--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "qs": "^6.9.4",
     "vex-dialog": "^1.1.0",
     "vex-js": "^4.1.0",
-    "vue": "^3.0.0-beta.1",
-    "vue-router": "^4.0.0-alpha.6",
-    "vuex": "^4.0.0-alpha.1"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
@@ -35,7 +35,7 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
