--- a/package.json
+++ b/package.json
@@ -1,53 +1,56 @@
 {
   "name": "manga-universe",
-  "version": "1.1.1",
-  "description": "Aplicativo para download e leitura de mangás utilizando Electron e VueJS",
-  "author": "Pablo Souza",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
-    "gh-publish": "vue-cli-service electron:build -p always",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+  "version": "2.0.0",
+  "description": "Aplicativo para download e leitura de mangás utilizando Electron e ReactJS",
+  "license": "MIT",
+  "repository": "https://github.com/pablovsouza/manga-universe",
+  "author": {
+    "name": "Pablo Souza",
+    "email": "pablovsouza@gmail.com"
   },
-  "main": "background.js",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "crypto-js": "^4.0.0",
-    "electron": "^9.0.4",
-    "electron-updater": "^4.3.5",
-    "fs": "^0.0.1-security",
-    "lodash": "^4.17.20",
-    "nedb": "^1.8.0",
-    "qs": "^6.9.4",
-    "vex-dialog": "^1.1.0",
-    "vex-js": "^4.1.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+  "main": ".webpack/main",
+  "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "electron-devtools-installer": "^3.1.0",
-    "electron-icon-builder": "^1.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
-    "vue-cli-plugin-vue-next": "~0.1.4",
-    "yarn": "^1.22.4"
+    "@electron-forge/cli": "^6.0.5",
+    "@electron-forge/maker-deb": "^6.0.5",
+    "@electron-forge/maker-rpm": "^6.0.5",
+    "@electron-forge/maker-squirrel": "^6.0.5",
+    "@electron-forge/maker-zip": "^6.0.5",
+    "@electron-forge/plugin-webpack": "^6.0.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "css-loader": "^6.0.0",
+    "electron": "23.1.0",
+    "eslint": "^8.0.1",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "node-loader": "^2.0.0",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.2",
+    "ts-node": "^10.0.0",
+    "typescript": "~4.5.4"
   },
-  "license": "MIT",
-  "repository": "https://github.com/pablovsouza/manga-universe"
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1",
+    "sass": "^1.58.3"
+  }
 }
