--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "test-electron",
-  "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "name": "manga-universe",
+  "version": "2.0.0",
+  "description": "Aplicativo para download e leitura de mangás utilizando Electron e VueJS",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "author": "Pablo Souza",
+  "repository": "https://github.com/pablovsouza/manga-universe",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -23,9 +23,12 @@
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "electron-updater": "^5.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-simple-img": "^3.0.0",
     "sass": "^1.58.3"
   },
   "devDependencies": {
