--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "electron-updater": "^5.3.0",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-simple-img": "^3.0.0",
