--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manga-universe",
-  "version": "2.0.0",
+  "version": "1.5.0",
   "description": "Aplicativo para download e leitura de mangás utilizando Electron e VueJS",
   "main": "./out/main/index.js",
   "author": "Pablo Souza",
@@ -23,6 +23,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "electron-updater": "^5.3.0",
+    "react-html-parser": "^2.0.2",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
