--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "electron-updater": "^5.3.0",
+    "node-html-parser": "^6.1.5",
     "react-html-parser": "^2.0.2",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
